feat: new fieldset component, updates some input styles and admin cash registers page

--- a/src/app/admin/home/home-shared/components/list-headline-header/list-headline-header.component.html
+++ b/src/app/admin/home/home-shared/components/list-headline-header/list-headline-header.component.html
@@ -1,5 +1,5 @@
 <header class="flex items-center justify-between gap-3">
-  <app-list-headline [headline]="headline" />
+  <app-list-headline headline="Listado de productos" />
   <app-icon-button
     [icon]="faAdd"
     type="button"
