--- a/src/app/admin/home/cash-registers/components/new-cash-register-form/new-cash-register-form.component.html
+++ b/src/app/admin/home/cash-registers/components/new-cash-register-form/new-cash-register-form.component.html
@@ -1,25 +1,40 @@
-<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div class="control">
-    <label for="numeral">Número de caja</label>
-    <input
-      type="number"
-      id="numeral"
-      [readOnly]="loading()"
-      formControlName="numeral"
-      class="input"
-    />
-  </div>
-  <div class="control">
-    <label for="description">Descripción</label>
-    <input
-      type="text"
-      id="description"
-      [readOnly]="loading()"
-      formControlName="description"
-      class="input"
-    />
-  </div>
-  <app-button type="submit" [loading]="loading()" class="mt-3"
-    >Registrar
-  </app-button>
+<form
+  class="duration-300"
+  [ngClass]="show ? 'opacity-100 visible h-full' : 'opacity-0 invisible h-0'"
+  [formGroup]="form"
+  (ngSubmit)="onSubmit()"
+>
+  <app-fieldset legend="Nueva caja registradora">
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-y-3 gap-x-5">
+      <div class="control">
+        <label for="numeral">Número de caja</label>
+        <input
+          type="number"
+          id="numeral"
+          class="input"
+          formControlName="numeral"
+          placeholder="Ej: 1"
+        />
+      </div>
+      <div class="control">
+        <label for="description">Descripción</label>
+        <input
+          type="text"
+          id="description"
+          class="input"
+          formControlName="description"
+          placeholder="Ej: Sede 1"
+        />
+      </div>
+    </div>
+    <div class="flex items-center justify-between gap-3">
+      <app-icon-button
+        [icon]="faTrash"
+        type="button"
+        color="neutral"
+        (click)="emitOnClose()"
+      />
+      <app-button type="submit" [loading]="loading()">Registrar</app-button>
+    </div>
+  </app-fieldset>
 </form>
