--- a/src/app/admin/home/cash-registers/list/list.component.html
+++ b/src/app/admin/home/cash-registers/list/list.component.html
@@ -1,20 +1,25 @@
 <app-header-title
   hTitle="Cajas registradoras"
-  hDescription="Administra las cajas registradoras"
+  hDescription="Administra todas las cajas registradoras"
   [return]="true"
 />
-<div class="mt-10 grid grid-cols-[21rem_1fr] gap-5">
-  <article class="card">
-    <h3 class="text-2xl text-gray-700 font-medium mb-3">Registro de caja</h3>
-    <app-new-cash-register-form />
-  </article>
-  <article class="card overflow-x-auto">
-    <h3 class="text-2xl text-gray-700 font-medium mb-3">Listado de cajas</h3>
-    <div class="overflow-x-auto">
-      <app-cash-registers-table (onEdit)="showSideBar.set(true)" />
-    </div>
-  </article>
-</div>
+<article class="card">
+  <app-list-headline-header
+    action="Añadir caja registradora"
+    [disabled]="showRegisterForm()"
+    (onClick)="showRegisterForm.set(true)"
+  />
+  <app-new-cash-register-form
+    [show]="showRegisterForm()"
+    (onClose)="showRegisterForm.set(false)"
+  />
+  <ng-template #spinner>
+    <app-spinner />
+  </ng-template>
+  <div class="mt-3 overflow-x-auto" *ngIf="!loading(); else spinner">
+    <app-cash-registers-table (onEdit)="showSideBar.set(true)" />
+  </div>
+</article>
 <app-sidebar
   headline="Caja Registradora"
   actionName="Actualizar"
