--- a/src/app/admin/home/platforms/components/new-platform-form/new-platform-form.component.html
+++ b/src/app/admin/home/platforms/components/new-platform-form/new-platform-form.component.html
@@ -1,13 +1,10 @@
 <form
-  class="mb-3 duration-300"
+  class="duration-300"
   [ngClass]="show ? 'opacity-100 visible h-full' : 'opacity-0 invisible h-0'"
   [formGroup]="form"
   (ngSubmit)="onSubmit()"
 >
-  <fieldset class="form border border-neutral-300 px-5 pt-2 pb-4 rounded-xl">
-    <legend class="px-2 text-gray-700 font-medium text-lg">
-      Nueva plataforma
-    </legend>
+  <app-fieldset legend="Nueva plataforma">
     <div class="control">
       <label for="name">Nombre</label>
       <input
@@ -27,5 +24,5 @@
       />
       <app-button type="submit" [loading]="loading()">Registrar</app-button>
     </div>
-  </fieldset>
+  </app-fieldset>
 </form>
