--- a/src/app/admin/home/platforms/list/list.component.html
+++ b/src/app/admin/home/platforms/list/list.component.html
@@ -1,11 +1,10 @@
 <app-header-title
   hTitle="Plataformas"
-  hDescription="Ten control absoluto de todas las plataformas a las que quieres administrar sus saldos y transferencias"
+  hDescription="Administra todas las plataformas"
   [return]="true"
 />
 <article class="card">
   <app-list-headline-header
-    headline="Listado de plataformas"
     action="Añadir plataforma"
     [disabled]="showRegisterForm()"
     (onClick)="showRegisterForm.set(true)"
@@ -15,8 +14,11 @@
     (onClose)="showRegisterForm.set(false)"
   />
   <app-spinner *ngIf="loading()" />
-  <div class="overflow-x-auto">
-    <app-platforms-table *ngIf="!loading()" (onEdit)="onEdit()" />
+  <div class="mt-3 overflow-x-auto">
+    <app-platforms-table
+      *ngIf="!loading()"
+      (onEdit)="this.showSideBar.set(true)"
+    />
   </div>
 </article>
 <app-sidebar
