--- a/src/styles.css
+++ b/src/styles.css
@@ -11,19 +11,19 @@ body {
   @apply flex flex-col gap-4;
 }
 
-.form div.control {
+.form .control {
   @apply flex flex-col gap-1.5;
 }
 
-.form div.control label {
+.form .control label {
   @apply block text-gray-700 text-xs sm:text-sm md:text-base font-medium;
 }
 
-.form div.control-row {
+.form .control-row {
   @apply flex items-center gap-1.5;
 }
 
-.form div.control-row label:not(.font-normal) {
+.form .control-row label:not(.font-normal) {
   @apply text-gray-700 font-medium;
 }
 
@@ -39,7 +39,7 @@ body {
 }
 
 .input {
-  @apply rounded-lg px-2.5 sm:px-3 md:px-4 py-1 sm:py-1.5 md:py-2 border border-gray-300 bg-gray-50 text-gray-700 text-sm md:text-base focus:ring-1 focus:ring-blue-500 focus:border-blue-500 focus:outline-none;
+  @apply rounded-lg px-2.5 sm:px-3 md:px-4 py-1 sm:py-1.5 md:py-2 border border-gray-300 bg-gray-50 text-gray-700 text-xs sm:text-sm md:text-base focus:ring-1 focus:ring-blue-500 focus:border-blue-500 focus:outline-none;
 }
 
 .card {
