add: go to movements button to cash register details page

--- a/src/app/admin/home/cash-registers/details/components/quick-actions/quick-actions.component.html
+++ b/src/app/admin/home/cash-registers/details/components/quick-actions/quick-actions.component.html
@@ -1,1 +1,9 @@
-<p>quick-actions works!</p>
+<app-detail-wrapper headline="Acciones rápidas" [loading]="false">
+  <ul class="flex flex-col gap-3">
+    <li>
+      <app-button type="button" (click)="goToMovements()">
+        Ver movimientos
+      </app-button>
+    </li>
+  </ul>
+</app-detail-wrapper>
