--- a/src/app/portal/portal.component.html
+++ b/src/app/portal/portal.component.html
@@ -1,7 +1,3 @@
-<app-header />
-<app-portal-navbar />
-<main
-  class="lg:ml-56 mt-16 lg:w-[calc(100%-14rem)] min-h-[calc(100vh-4rem)] px-6 pb-5"
->
+<app-main-layout [routes]="routes">
   <router-outlet />
-</main>
+</app-main-layout>
