--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -28,16 +28,17 @@
         <fa-icon [icon]="faExpand" [rotate]="!showDropdown() ? 90 : 270" />
       </button>
       <ul
-        class="absolute top-16 right-0 w-48 text-violet-700 font-medium flex flex-col gap-2 px-2 py-1.5 rounded-xl bg-white shadow text-center duration-300"
+        class="absolute top-16 right-0 w-48 bg-violet-700 font-medium flex flex-col gap-2 px-2 py-1.5 rounded-xl text-white shadow duration-300"
         [ngClass]="
           showDropdown() ? 'visible opacity-100' : 'invisible opacity-0'
         "
       >
         <li>
           <a
-            class="flex items-center justify-center w-full px-2 py-1 hover:text-violet-600 hover:bg-violet-50 duration-200 cursor-pointer rounded-md"
+            class="flex items-center gap-3 w-full px-2 py-1 hover:bg-violet-600 hover:text-violet-50 duration-200 cursor-pointer rounded-md"
+            (click)="logout()"
           >
-            Cerrar sesión
+            <fa-icon [icon]="faLogout" /> Cerrar sesión
           </a>
         </li>
       </ul>
