add: profile option to header

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -36,6 +36,13 @@
         <li>
           <a
             class="flex items-center gap-3 w-full px-2 py-1 hover:bg-violet-600 hover:text-violet-50 duration-200 cursor-pointer rounded-md"
+          >
+            <fa-icon [icon]="faProfile" /> Perfil
+          </a>
+        </li>
+        <li>
+          <a
+            class="flex items-center gap-3 w-full px-2 py-1 hover:bg-violet-600 hover:text-violet-50 duration-200 cursor-pointer rounded-md"
             (click)="logout()"
           >
             <fa-icon [icon]="faLogout" /> Cerrar sesión
