--- a/src/app/portal/workspace/workspace.component.html
+++ b/src/app/portal/workspace/workspace.component.html
@@ -15,7 +15,7 @@
     </div>
   </section>
   <ng-template #home>
-    <app-home-nav />
+    <app-workspace-nav />
     <div class="divider my-7"></div>
     <router-outlet />
   </ng-template>
