--- a/src/app/portal/home/about-me/about-me.component.html
+++ b/src/app/portal/home/about-me/about-me.component.html
@@ -1,22 +1,1 @@
-<div class="my-5"></div>
-<div class="w-full px-5 py-4 rounded-b-lg bg-violet-50 shadow-md">
-  <h2 class="text-3xl font-medium text-violet-700">
-    ¡Bienvenido, {{ fullName() }}!
-  </h2>
-  <nav class="mt-5 w-full">
-    <ul class="flex items-center gap-1">
-      <li>
-        <a class="px-2 py-2.5 text-gray-700 hover:bg-violet-100 rounded"
-          >Mi cuenta</a
-        >
-      </li>
-      <li class="text-neutral-100">|</li>
-      <li>
-        <a class="px-2 py-2.5 text-gray-700 hover:bg-violet-100 rounded">
-          Ver jornadas
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <router-outlet />
-</div>
+<p>about-me-component works!</p>
