--- a/src/app/portal/workspace/transactions/transactions.component.html
+++ b/src/app/portal/workspace/transactions/transactions.component.html
@@ -3,7 +3,7 @@
     <h2 class="home-subtitle">Nueva Transacción</h2>
     <app-new-transaction-form />
   </section>
-  <app-home-table-section
+  <app-workspace-table-section
     headline="Mis transacciones"
     [length]="details().length"
     [loading]="loading"
@@ -15,7 +15,7 @@
       (onEdit)="tableOnEdit($event)"
       (onRemove)="tableOnRemove($event)"
     />
-  </app-home-table-section>
+  </app-workspace-table-section>
 </div>
 <app-sidebar
   headline="Transacción"
