--- a/src/app/portal/home/components/home-nav/home-nav.component.html
+++ b/src/app/portal/home/components/home-nav/home-nav.component.html
@@ -1,7 +1,7 @@
 <nav class="mt-5 w-full">
   <ul class="flex items-center gap-1">
-    <app-home-nav-item headline="Mi cuenta" route="/" />
+    <app-home-nav-item headline="Mi cuenta" route="./mi-cuenta" />
     <li class="text-neutral-200">|</li>
-    <app-home-nav-item headline="Ver jornadas" route="/journeys" />
+    <app-home-nav-item headline="Ver jornadas" route="./jornadas" />
   </ul>
 </nav>
