feat: journeys filtered by month and add responsive to some components

--- a/src/app/portal/home/layout/layout.component.html
+++ b/src/app/portal/home/layout/layout.component.html
@@ -1,6 +1,6 @@
 <div class="my-5"></div>
 <div class="w-full px-5 py-4 rounded-b-lg bg-violet-50 shadow-md">
-  <h2 class="text-3xl font-medium text-violet-700">
+  <h2 class="text-xl sm:text-2xl md:text-3xl font-medium text-violet-700">
     ¡Bienvenido, {{ fullName() }}!
   </h2>
   <app-home-nav />
