add: loading status to new safe form button

--- a/src/app/admin/home/safes/components/new-safe-form/new-safe-form.component.html
+++ b/src/app/admin/home/safes/components/new-safe-form/new-safe-form.component.html
@@ -21,7 +21,9 @@
         color="neutral"
         (click)="emitOnClose()"
       />
-      <app-button type="submit">Registrar caja fuerte</app-button>
+      <app-button type="submit" [loading]="loading()">
+        Registrar caja fuerte
+      </app-button>
     </div>
   </app-fieldset>
 </form>
