add: responsive to some components

--- a/src/app/admin/home/cash-registers/details/summary/summary.component.html
+++ b/src/app/admin/home/cash-registers/details/summary/summary.component.html
@@ -16,5 +16,5 @@
   </form>
   <app-quick-actions class="md:row-span-2" />
   <app-hours-stats />
-  <app-base />
+  <app-base-stats />
 </app-detail-layout>
