--- a/src/app/shared/components/custom-table/custom-table.component.html
+++ b/src/app/shared/components/custom-table/custom-table.component.html
@@ -1,6 +1,6 @@
 <ng-template #noData>
   <p
-    class="flex items-center justify-center w-full h-full text-center text-gray-700 text-xl py-6 px-5"
+    class="flex items-center justify-center w-full h-full text-center text-gray-700 text-base sm:text-lg md:text-xl py-6 px-5"
   >
     {{ table.noDataMessage }}
   </p>
