--- a/src/app/admin/home/home-shared/components/detail-headline/detail-headline.component.html
+++ b/src/app/admin/home/home-shared/components/detail-headline/detail-headline.component.html
@@ -1,3 +1,6 @@
-<h3 class="text-violet-700 font-medium text-2xl mb-5" [ngClass]="mapAlign">
+<h3
+  class="text-violet-700 font-medium text-lg sm:text-xl md:text-2xl mb-5"
+  [ngClass]="mapAlign"
+>
   {{ headline }}
 </h3>
