--- a/src/app/admin/home/home-shared/components/detail-stat-wrapper/detail-stat-wrapper.component.html
+++ b/src/app/admin/home/home-shared/components/detail-stat-wrapper/detail-stat-wrapper.component.html
@@ -1,5 +1,5 @@
 <li
-  class="text-lg text-gray-700 px-2 py-1 rounded-lg hover:bg-violet-50 grid grid-cols-3 items-center"
+  class="text-sm sm:text-base md:text-lg text-gray-700 px-2 py-1 rounded-lg hover:bg-violet-50 grid grid-cols-3 items-center"
 >
   {{ headline }}
   <hr class="border-gray-300 w-full" />
