--- a/src/app/auth/change-password/change-password.component.html
+++ b/src/app/auth/change-password/change-password.component.html
@@ -1,8 +1,9 @@
-<article class="card w-full">
-  <header class="mb-3 flex flex-col gap-1">
-    <h1 class="text-2xl text-gray-800 font-medium">{{ title() }}</h1>
-    <h2 class="text-gray-700 font-light">{{ subtitle() }}</h2>
-  </header>
+<app-auth-card
+  [headline]="title()"
+  [description]="subtitle()"
+  action="Volver al inicio"
+  route="iniciar-sesion"
+>
   <ng-container *ngIf="!requested(); else newPass">
     <app-request-change-password-form
       [form]="requestChangePasswordForm"
@@ -17,12 +18,4 @@
       (onSubmit)="changePassword()"
     />
   </ng-template>
-  <footer class="w-full justify-center items-center flex mt-5">
-    <a
-      (click)="goToLogin()"
-      class="w-full text-center text-blue-500 text-base font-semibold hover:text-blue-400 cursor-pointer"
-    >
-      Volver al inicio
-    </a>
-  </footer>
-</article>
+</app-auth-card>
