refactor: workspace layout (in progress) and responsive

--- a/src/app/portal/home/about-me/about-me.component.html
+++ b/src/app/portal/home/about-me/about-me.component.html
@@ -1,9 +1,13 @@
 <app-home-subtitle headline="Mi cuenta" />
-<p class="flex items-center justify-between w-full max-w-md mt-3 text-gray-700">
+<p
+  class="flex items-center justify-between w-full max-w-md mt-3 text-gray-700 text-xs sm:text-sm md:text-base"
+>
   Correo electrónico:
   <span>{{ loggedIn()?.email }}</span>
 </p>
-<p class="flex items-center justify-between w-full max-w-md mt-3 text-gray-700">
+<p
+  class="flex items-center justify-between w-full max-w-md mt-3 text-gray-700 text-xs sm:text-sm md:text-base"
+>
   Registrado desde:
   <span>{{ loggedIn()?.createdDate | date : "dd/MM/yyyy HH:mm" }}</span>
 </p>
