--- a/src/app/portal/workspace/components/workspace-table-section/workspace-table-section.component.html
+++ b/src/app/portal/workspace/components/workspace-table-section/workspace-table-section.component.html
@@ -6,7 +6,9 @@
     *ngIf="!loading(); else spinner"
   >
     <div>
-      <h2 class="home-subtitle">{{ headline }}</h2>
+      <h2 class="font-medium text-lg sm:text-xl md:text-2xl text-gray-700 mb-3">
+        {{ headline }}
+      </h2>
       <div class="overflow-x-auto">
         <ng-content></ng-content>
       </div>
