--- a/src/app/portal/workspace/expenses/components/new-expense-form/new-expense-form.component.html
+++ b/src/app/portal/workspace/expenses/components/new-expense-form/new-expense-form.component.html
@@ -21,17 +21,18 @@
     />
   </div>
   <div class="flex flex-col gap-1">
-    <div class="control-row flex-row-reverse justify-end w-full">
-      <label for="discount" class="w-full flex items-center gap-1"
-        >Descontar</label
-      >
+    <label
+      for="discount"
+      class="block text-gray-700 text-xs sm:text-sm md:text-base font-medium"
+    >
       <input
         type="checkbox"
         id="discount"
         formControlName="discount"
         (click)="handleDiscount()"
       />
-    </div>
+      Descontar
+    </label>
     <small
       class="text-center font-medium text-sm text-red-700 -mb-3"
       [ngClass]="discount() ? 'block' : 'invisible'"
@@ -39,7 +40,9 @@
       (Será descontado de su nómina)
     </small>
   </div>
-  <label class="text-gray-800 font-medium">
+  <label
+    class="block text-gray-700 text-xs sm:text-sm md:text-base font-medium"
+  >
     <input type="checkbox" formControlName="administrative" />
     Administrativo
   </label>
