--- a/src/app/portal/workspace/expenses/expenses.component.html
+++ b/src/app/portal/workspace/expenses/expenses.component.html
@@ -1,8 +1,5 @@
-<div class="home-container">
-  <section class="home-form">
-    <h2 class="home-subtitle">Nuevo Gasto</h2>
-    <app-new-expense-form />
-  </section>
+<app-workspace-container formHeadline="Nuevo Gasto">
+  <app-new-expense-form form />
   <app-workspace-table-section
     headline="Mis gastos"
     [length]="expenses().length"
@@ -16,7 +13,7 @@
       (onRemove)="tableOnRemove($event)"
     />
   </app-workspace-table-section>
-</div>
+</app-workspace-container>
 <app-sidebar
   [showSideBar]="showSideBarUpdate"
   [loading]="updateLoading()"
