--- a/src/app/portal/workspace/components/workspace-table-section/workspace-table-section.component.html
+++ b/src/app/portal/workspace/components/workspace-table-section/workspace-table-section.component.html
@@ -1,7 +1,11 @@
-<section class="card flex items-center justify-center h-96">
-  <ng-template #spinner><app-spinner /></ng-template>
+<section class="card h-[21rem] sm:h-[21.5rem] md:h-96">
+  <ng-template #spinner>
+    <div class="h-full flex items-center justify-center">
+      <app-spinner />
+    </div>
+  </ng-template>
   <div
-    class="w-full h-full"
+    class="size-full"
     [ngClass]="{ 'flex flex-col justify-between': length >= 1 }"
     *ngIf="!loading(); else spinner"
   >
