--- a/src/app/portal/workspace/bank-deposits/components/bank-deposit-info-list/bank-deposit-info-list.component.html
+++ b/src/app/portal/workspace/bank-deposits/components/bank-deposit-info-list/bank-deposit-info-list.component.html
@@ -3,7 +3,9 @@
 >
   <article class="w-full">
     <header class="mb-2">
-      <h4 class="text-xl text-violet-700 font-medium hover:text-violet-600">
+      <h4
+        class="text-base sm:text-lg md:text-xl text-violet-700 font-medium hover:text-violet-600"
+      >
         {{ formattedHeadline }}
       </h4>
     </header>
@@ -11,7 +13,7 @@
       <ng-container *ngIf="type === 'depositor'; else payments">
         <li
           *ngFor="let depositor of bankDeposit?.depositors"
-          class="flex items-center justify-between text-gray-600"
+          class="flex items-center justify-between text-gray-600 text-xs sm:text-sm md:text-base"
         >
           {{ depositor.fullName }}
           <hr class="w-1/4 border-violet-200" />
@@ -23,7 +25,7 @@
       <ng-template #payments>
         <li
           *ngFor="let payment of bankDeposit?.payments"
-          class="flex items-center justify-between text-gray-600"
+          class="flex items-center justify-between text-gray-600 text-xs sm:text-sm md:text-base"
         >
           {{ payment.platform.name }}
           <hr class="w-1/4 border-violet-200" />
