--- a/src/app/portal/workspace/bank-deposits/components/new-depositor-form/new-depositor-form.component.html
+++ b/src/app/portal/workspace/bank-deposits/components/new-depositor-form/new-depositor-form.component.html
@@ -1,8 +1,5 @@
 <form [formGroup]="form" (ngSubmit)="emitOnSubmit()">
-  <fieldset class="form px-5 py-4 border border-violet-300 rounded-xl">
-    <legend class="text-gray-700 text-xl font-medium px-2">
-      ¿Cuánto entregas?
-    </legend>
+  <app-fieldset legend="¿Cuánto entregas?">
     <div class="control">
       <label for="depositValue">Valor a entregar</label>
       <input
@@ -15,5 +12,5 @@
       />
     </div>
     <app-button type="submit" [loading]="loading">Entregar</app-button>
-  </fieldset>
+  </app-fieldset>
 </form>
