--- a/src/app/portal/workspace/components/workspace-container/workspace-container.component.html
+++ b/src/app/portal/workspace/components/workspace-container/workspace-container.component.html
@@ -1,8 +1,8 @@
-<div class="grid lg:grid-cols-[20rem_minmax(20rem,_1fr)] gap-6 w-full">
-  <section class="card w-full max-w-sm mx-auto self-start">
-    <h2 class="font-medium text-lg sm:text-xl md:text-2xl text-gray-700 mb-3">
-      {{ formHeadline }}
-    </h2>
+<div
+  class="flex flex-col md:grid md:grid-cols-[20rem_minmax(20rem,_1fr)] gap-6 w-full"
+>
+  <section class="card w-full md:max-w-sm mx-auto self-start">
+    <app-workspace-subtitle [subtitle]="formHeadline" />
     <ng-content select="[form]"></ng-content>
   </section>
   <ng-content></ng-content>
