--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,13 +1,13 @@
 <ul class="flex items-center justify-center gap-3">
   <li
-    class="flex items-center justify-center w-7 h-9 text-violet-700 text-lg text-center font-medium border-2 border-violet-700 rounded-lg cursor-pointer hover:scale-[1.02] transition-all"
+    class="flex items-center justify-center w-5 sm:w-6 md:w-7 h-7 sm:h-8 md:h-9 text-violet-700 text-sm sm:text-base md:text-lg text-center font-medium border-2 border-violet-700 rounded-lg cursor-pointer hover:scale-[1.025] transition-all"
     (click)="emitDirectionOnSelectPage('left')"
   >
     <fa-icon [icon]="faLeft" size="xs" />
   </li>
   <li>
     <select
-      class="text-center w-28 h-9 border-violet-700 border-2 outline-none rounded-lg text-violet-700 text-lg font-medium cursor-pointer"
+      class="text-center w-28 h-7 sm:h-8 md:h-9 border-violet-700 border-2 outline-none rounded-lg text-violet-700 text-sm sm:text-base md:text-lg font-medium cursor-pointer"
       (change)="emitOnSelectPage($event)"
       [value]="pagination()?.currentPage"
     >
@@ -17,7 +17,7 @@
     </select>
   </li>
   <li
-    class="flex items-center justify-center w-7 h-9 text-violet-700 text-lg text-center font-medium border-2 border-violet-700 rounded-lg cursor-pointer hover:scale-[1.02] transition-all"
+    class="flex items-center justify-center w-5 sm:w-6 md:w-7 h-7 sm:h-8 md:h-9 text-violet-700 text-sm sm:text-base md:text-lg text-center font-medium border-2 border-violet-700 rounded-lg cursor-pointer hover:scale-[1.025] transition-all"
     (click)="emitDirectionOnSelectPage('right')"
   >
     <fa-icon [icon]="faRight" size="xs" />
