--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,10 @@ body {
   @apply px-5 sm:px-6 md:px-7 py-3.5 sm:py-4 md:py-5 bg-white rounded-xl drop-shadow;
 }
 
+.card-accent {
+  @apply px-5 sm:px-6 md:px-7 py-3.5 sm:py-4 md:py-5 bg-white rounded-xl drop-shadow-lg;
+}
+
 .divider {
   @apply h-px w-full bg-neutral-300;
 }
