--- a/src/app/portal/platforms/components/new-platform-transfer-form/new-platform-transfer-form.component.html
+++ b/src/app/portal/platforms/components/new-platform-transfer-form/new-platform-transfer-form.component.html
@@ -6,7 +6,7 @@
   <div>
     <label
       for="voucher"
-      class="px-3 py-2 border border-gray-300 bg-gray-50 rounded-lg text-gray-700 text-sm cursor-pointer"
+      class="px-3 py-2 border border-gray-300 bg-gray-50 rounded-lg text-gray-700 text-xs sm:text-sm cursor-pointer"
       >{{
         vouchers().length > 0
           ? "Archivos cargados: " + vouchers().length
@@ -34,7 +34,7 @@
   />
   <button
     type="submit"
-    class="cursor-pointer text-cyan-700 text-lg hover:text-cyan-600 hover:underline hover:underline-offset-2"
+    class="cursor-pointer text-cyan-700 text-sm sm:text-base md:text-lg hover:text-cyan-600 hover:underline hover:underline-offset-2"
   >
     {{ loading() ? "Cargando..." : "Añadir transferencia" }}
   </button>
