--- a/src/app/portal/platforms/components/platform-balance-info/platform-balance-info.component.html
+++ b/src/app/portal/platforms/components/platform-balance-info/platform-balance-info.component.html
@@ -1,34 +1,24 @@
 <div class="flex flex-col gap-2.5 mb-3">
-  <p class="text-gray-700 flex items-center justify-between">
-    <span>Saldo Inicial</span>
-    <span class="font-medium">{{
-      selectedPortalPlatform()?.initialBalance
-        | currency : "symbol" : "$" : "0.00"
-    }}</span>
-  </p>
-  <div class="divider"></div>
-  <p class="text-gray-700 flex items-center justify-between">
-    <span>Saldo Final</span>
-    <span class="font-medium">{{
-      selectedPortalPlatform()?.finalBalance
-        | currency : "symbol" : "$" : "0.00"
-    }}</span>
-  </p>
-  <div class="divider"></div>
-  <p class="text-gray-700 flex items-center justify-between">
-    <span>Transferencias del día</span>
-    <span class="font-medium">{{
-      selectedPortalPlatform()?.transfersAmount
-    }}</span>
-  </p>
-  <div class="divider"></div>
-  <p class="text-gray-700 flex items-center justify-between">
-    <span>Total transferido</span>
-    <span class="font-medium">{{
-      selectedPortalPlatform()?.transfersTotal
-        | currency : "symbol" : "$" : "0.00"
-    }}</span>
-  </p>
+  <app-balance-stat
+    stat="Saldo Inicial"
+    [value]="selectedPortalPlatform()?.initialBalance"
+  />
+  <hr class="border-neutral-300" />
+  <app-balance-stat
+    stat="Saldo Final"
+    [value]="selectedPortalPlatform()?.finalBalance"
+  />
+  <hr class="border-neutral-300" />
+  <app-balance-stat
+    stat="Transferencias del día"
+    [value]="selectedPortalPlatform()?.transfersAmount"
+    [currency]="false"
+  />
+  <hr class="border-neutral-300" />
+  <app-balance-stat
+    stat="Total transferido"
+    [value]="selectedPortalPlatform()?.transfersTotal"
+  />
 </div>
 <app-button
   type="button"
