--- a/src/app/portal/platforms/platforms.component.html
+++ b/src/app/portal/platforms/platforms.component.html
@@ -5,14 +5,18 @@
     hDescription="Listado de todas las plataformas con sus saldos del día"
     [hDescriptionSecondLine]="description"
   />
-  <section class="w-full grid grid-cols-3 items-start gap-x-5">
-    <article class="card col-span-1">
+  <div
+    class="w-full flex flex-col md:grid md:grid-cols-[20rem_minmax(20rem,_1fr)] items-start gap-6"
+  >
+    <article class="card w-full">
       <app-platform-balance-list />
     </article>
-    <article class="card col-span-2 flex items-center w-full">
+    <article class="card flex items-center w-full">
       <div class="w-full">
         <header class="h-12 mb-2 flex items-center justify-center">
-          <h3 class="text-2xl text-gray-800 font-semibold">
+          <h3
+            class="text-lg sm:text-xl md:text-2xl text-gray-800 font-semibold"
+          >
             {{
               selectedPortalPlatform()?.platformName ??
                 "Selecciona una plataforma"
@@ -27,7 +31,9 @@
           <div class="divider-md my-3"></div>
           <footer class="w-full px-2.5">
             <header class="mb-1">
-              <h2 class="text-gray-700 text-lg font-medium">
+              <h2
+                class="text-gray-700 text-sm sm:text-base md:text-lg font-medium"
+              >
                 Nueva transferencia
               </h2>
             </header>
@@ -36,5 +42,5 @@
         </ng-container>
       </div>
     </article>
-  </section>
+  </div>
 </ng-template>
