--- a/src/app/portal/cash-registers/cash-register-opening/base-cash/components/base-form/base-form.component.html
+++ b/src/app/portal/cash-registers/cash-register-opening/base-cash/components/base-form/base-form.component.html
@@ -8,11 +8,12 @@
     color="neutral"
     [icon]="faReturn"
     (click)="emitReturn()"
-    >Regresar</app-icon-button
   >
-  <app-button type="button" color="neutral" (click)="handleShowSideBar()"
-    >Añadir observación</app-button
-  >
+    Regresar
+  </app-icon-button>
+  <app-button type="button" color="neutral" (click)="handleShowSideBar()">
+    Añadir observación
+  </app-button>
   <app-button type="button" (click)="emitRegister()">Registrar base</app-button>
 </div>
 <aside
