--- a/src/app/portal/cash-registers/cash-register-opening/entry-time/components/initial-working-form/initial-working-form.component.html
+++ b/src/app/portal/cash-registers/cash-register-opening/entry-time/components/initial-working-form/initial-working-form.component.html
@@ -12,7 +12,7 @@
       formControlName="initialWorking"
     />
   </div>
-  <div class="w-full mt-3 grid grid-cols-3 gap-5">
+  <div class="w-full mt-3 flex items-center justify-between gap-5">
     <app-icon-button
       type="button"
       [icon]="faReturn"
