--- a/src/app/portal/cash-registers/available-cash-registers/available-cash-registers.component.html
+++ b/src/app/portal/cash-registers/available-cash-registers/available-cash-registers.component.html
@@ -4,11 +4,15 @@
 />
 <section class="flex flex-col gap-5">
   <header>
-    <h3 class="text-2xl text-gray-700 text-center font-medium mb-3">
+    <h3
+      class="text-lg sm:text-xl md:text-2xl text-gray-700 text-center font-medium mb-3"
+    >
       Listado de cajas
     </h3>
   </header>
-  <section class="grid grid-cols-3 place-content-center gap-10 px-10">
+  <section
+    class="grid grid-cols-[repeat(auto-fit,_minmax(16rem,_1fr))] gap-10 px-10"
+  >
     <app-cash-register-card
       *ngFor="let cashRegister of cashRegisters()"
       [cashRegister]="cashRegister"
