--- a/src/app/portal/cash-registers/cash-register-opening/entry-time/entry-time.component.html
+++ b/src/app/portal/cash-registers/cash-register-opening/entry-time/entry-time.component.html
@@ -2,10 +2,12 @@
   hTitle="Apertura de caja"
   hDescription="Ingresa tu hora de llegada"
 />
-<section class="w-2/3 m-auto">
+<section class="w-full max-w-md m-auto">
   <app-spinner *ngIf="loading(); else content" />
   <ng-template #content>
-    <h3 class="text-2xl text-gray-700 text-center font-medium mb-3">
+    <h3
+      class="text-lg sm:text-xl md:text-2xl text-gray-700 text-center font-medium mb-3"
+    >
       ¿A qué hora llegaste?
     </h3>
     <app-initial-working-form
