--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -28,7 +28,7 @@
         <fa-icon [icon]="faExpand" [rotate]="!showDropdown() ? 90 : 270" />
       </button>
       <ul
-        class="absolute top-16 right-0 w-48 bg-violet-700 font-medium flex flex-col gap-2 px-2 py-1.5 rounded-xl text-white shadow duration-300"
+        class="absolute top-16 right-0 w-48 z-50 bg-violet-700 font-medium flex flex-col gap-2 px-2 py-1.5 rounded-xl text-white shadow duration-300"
         [ngClass]="
           showDropdown() ? 'visible opacity-100' : 'invisible opacity-0'
         "
