--- a/src/app/portal/home/components/home-nav-item/home-nav-item.component.html
+++ b/src/app/portal/home/components/home-nav-item/home-nav-item.component.html
@@ -1,6 +1,6 @@
 <li>
   <a
-    class="px-2 py-2.5 text-xs sm:text-sm md:text-base text-gray-700 hover:text-violet-600 duration-300"
+    class="px-2 py-2.5 text-sm sm:text-base md:text-lg text-gray-700 hover:text-violet-600 duration-300"
     [routerLink]="route"
     routerLinkActive="border-b-2 md:border-b-4 border-violet-700 text-violet-700"
   >
