add: button for export to excel file

--- a/src/app/portal/home/journeys/components/journey-stats/journey-stats.component.html
+++ b/src/app/portal/home/journeys/components/journey-stats/journey-stats.component.html
@@ -1,5 +1,5 @@
 <ul
-  class="text-gray-700 text-xs sm:text-sm md:text-base w-full max-w-xl px-2 mx-auto mt-5"
+  class="text-gray-700 text-xs sm:text-sm md:text-base w-full max-w-xl px-2 mx-auto"
 >
   <app-journey-stat
     stat="Total por descontar"
