--- a/src/app/portal/home/journeys/journeys.component.html
+++ b/src/app/portal/home/journeys/journeys.component.html
@@ -12,5 +12,12 @@
     </form>
   </header>
   <app-journeys-table />
+  <hr class="border-neutral-300 my-2.5" />
   <app-journey-stats [journeys]="journeys()" />
+  <hr class="border-neutral-300 mt-2.5 mb-4" />
+  <div class="w-full flex items-center justify-center">
+    <app-icon-button [icon]="faExcel" type="button" color="neutral">
+      Exportar a Excel
+    </app-icon-button>
+  </div>
 </section>
