--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -36,6 +36,7 @@
         <li>
           <a
             class="flex items-center gap-3 w-full px-2 py-1 hover:bg-violet-600 hover:text-violet-50 duration-200 cursor-pointer rounded-md"
+            (click)="goToProfile()"
           >
             <fa-icon [icon]="faProfile" /> Perfil
           </a>
