add: main details and date handler

--- a/src/app/admin/home/cash-registers/details/components/base-stats/base-stats.component.html
+++ b/src/app/admin/home/cash-registers/details/components/base-stats/base-stats.component.html
@@ -1,11 +1,11 @@
 <app-detail-wrapper headline="Base" [loading]="loading()">
   <ul class="flex flex-col gap-1">
-    <app-detail-stat-wrapper
+    <app-detail-stat-inline
       headline="Inicial"
       [stat]="detail()?.initialBase"
       pipe="currency"
     />
-    <app-detail-stat-wrapper
+    <app-detail-stat-inline
       headline="Final"
       [stat]="detail()?.finalBase"
       pipe="currency"
