update: logic for disable transfer button and logic for transfer form

--- a/src/app/admin/home/safes/components/quick-actions/quick-actions.component.html
+++ b/src/app/admin/home/safes/components/quick-actions/quick-actions.component.html
@@ -6,9 +6,16 @@
       </app-icon-button>
     </li>
     <li>
-      <app-icon-button [icon]="faTransfer" type="button" color="neutral">
+      <app-icon-button
+        [icon]="faTransfer"
+        type="button"
+        color="neutral"
+        (click)="transferModal.open()"
+        [disabled]="disabled()"
+      >
         Transferir
       </app-icon-button>
     </li>
   </ul>
 </app-detail-wrapper>
+<app-transfer-modal />
