--- a/src/app/admin/home/safes/components/quick-actions/quick-actions.component.html
+++ b/src/app/admin/home/safes/components/quick-actions/quick-actions.component.html
@@ -1,7 +1,13 @@
 <app-detail-wrapper headline="Administración" [loading]="false">
   <ul class="flex flex-col gap-3">
     <li>
-      <app-icon-button [icon]="faBase" type="button" color="neutral">
+      <app-icon-button
+        [icon]="faBase"
+        type="button"
+        color="neutral"
+        (click)="updateBaseModal.open()"
+        [disabled]="disabled()"
+      >
         Ajustar base
       </app-icon-button>
     </li>
@@ -18,4 +24,5 @@
     </li>
   </ul>
 </app-detail-wrapper>
+<app-update-base-modal />
 <app-transfer-modal />
