--- a/src/app/admin/home/safes/components/update-base-modal/update-base-modal.component.html
+++ b/src/app/admin/home/safes/components/update-base-modal/update-base-modal.component.html
@@ -9,8 +9,15 @@
   </div>
   <hr class="border-neutral-300 my-5" />
   <div class="flex flex-col gap-3 w-full max-w-sm mx-auto">
-    <app-button type="button" (click)="onSave()">Guardar</app-button>
-    <app-button type="button" color="neutral" (click)="close()">
+    <app-button type="button" (click)="onSave()" [loading]="loading()">
+      Guardar
+    </app-button>
+    <app-button
+      type="button"
+      color="neutral"
+      (click)="close()"
+      [disabled]="loading()"
+    >
       Cerrar
     </app-button>
   </div>
