--- a/src/app/admin/home/safes/components/update-base-modal/update-base-modal.component.html
+++ b/src/app/admin/home/safes/components/update-base-modal/update-base-modal.component.html
@@ -9,7 +9,12 @@
   </div>
   <hr class="border-neutral-300 my-5" />
   <div class="flex flex-col gap-3 w-full max-w-sm mx-auto">
-    <app-button type="button" (click)="onSave()" [loading]="loading()">
+    <app-button
+      type="button"
+      (click)="onSave()"
+      [loading]="loading()"
+      [disabled]="form.invalid"
+    >
       Guardar
     </app-button>
     <app-button
