update: transfer modal form

--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -4,8 +4,8 @@
   class="w-full max-h-[85%] overflow-y-auto px-7 py-5 rounded-lg shadow-lg backdrop:backdrop-blur-sm outline-none"
 >
   <h2
-    class="text-violet-700 font-medium mb-5"
-    [ngClass]="[mapFontSize, mapTextAlign]"
+    class="text-xl sm:text-2xl md:text-3xl text-violet-700 font-medium mb-5"
+    [ngClass]="[mapTextAlign]"
   >
     {{ headline }}
   </h2>
