--- a/src/app/admin/home/safes/components/transfer-modal/transfer-modal.component.html
+++ b/src/app/admin/home/safes/components/transfer-modal/transfer-modal.component.html
@@ -1,4 +1,4 @@
-<app-modal headline="Nueva transferencia">
+<app-modal headline="Nueva transferencia" align="center">
   <section class="mb-3 font-medium text-gray-700 text-center">
     <h3 class="text-base sm:text-lg md:text-xl">
       Caja Fuerte N° {{ details()?.safe?.numeral }}
@@ -10,122 +10,128 @@
       </span>
     </p>
   </section>
-  <form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="control">
-      <label for="type">Tipo de transferencia</label>
-      <select
-        id="type"
-        class="input"
-        formControlName="type"
-        (change)="onChangeType()"
-      >
-        <option value="" disabled>Selecciona una opción</option>
-        <option value="deposit">El dinero ingresa a la caja fuerte</option>
-        <option value="withdrawal">El dinero sale de la caja fuerte</option>
-      </select>
-    </div>
-    <div class="grid grid-cols-3 gap-3">
-      <div class="control col-span-1">
-        <label for="amount">Cantidad</label>
-        <input
-          type="number"
-          id="amount"
+  <form class="form text-left" [formGroup]="form" (ngSubmit)="onSubmit()">
+    <app-fieldset legend="Formulario">
+      <div class="control">
+        <label for="type">Tipo de transferencia</label>
+        <select
+          id="type"
           class="input"
-          placeholder="Ej: 100"
-          formControlName="amount"
-          autocomplete="off"
-        />
-      </div>
-      <div class="control col-span-2">
-        <label for="denomination">Denominación</label>
-        <select id="denomination" class="input" formControlName="denomination">
-          <option value="" disabled>Selecciona una denominación</option>
-          <option
-            value="hundredThousand"
-            [disabled]="disabled || (receive && base?.hundredThousand === 0)"
-            class="enabled:text-violet-700 enabled:font-medium"
-          >
-            $100.000
-          </option>
-          <option
-            value="fiftyThousand"
-            [disabled]="disabled || (receive && base?.fiftyThousand === 0)"
-            class="enabled:text-violet-700 enabled:font-medium"
-          >
-            $50.000
-          </option>
-          <option
-            value="twentyThousand"
-            [disabled]="disabled || (receive && base?.twentyThousand === 0)"
-            class="enabled:text-violet-700 enabled:font-medium"
-          >
-            $20.000
-          </option>
-          <option
-            value="tenThousand"
-            [disabled]="disabled || (receive && base?.tenThousand === 0)"
-            class="enabled:text-violet-700 enabled:font-medium"
-          >
-            $10.000
-          </option>
-          <option
-            value="fiveThousand"
-            [disabled]="disabled || (receive && base?.fiveThousand === 0)"
-            class="enabled:text-violet-700 enabled:font-medium"
-          >
-            $5.000
-          </option>
-          <option
-            value="twoThousand"
-            [disabled]="disabled || (receive && base?.twoThousand === 0)"
-            class="enabled:text-violet-700 enabled:font-medium"
-          >
-            $2.000
-          </option>
-          <option
-            value="thousand"
-            [disabled]="disabled || (receive && base?.thousand === 0)"
-            class="enabled:text-violet-700 enabled:font-medium"
-          >
-            $1.000
-          </option>
-          <option
-            value="fiveHundred"
-            [disabled]="disabled || (receive && base?.fiveHundred === 0)"
-            class="enabled:text-violet-700 enabled:font-medium"
-          >
-            $500
-          </option>
-          <option
-            value="twoHundred"
-            [disabled]="disabled || (receive && base?.twoHundred === 0)"
-            class="enabled:text-violet-700 enabled:font-medium"
-          >
-            $200
-          </option>
-          <option
-            value="hundred"
-            [disabled]="disabled || (receive && base?.hundred === 0)"
-            class="enabled:text-violet-700 enabled:font-medium"
-          >
-            $100
-          </option>
-          <option
-            value="fifty"
-            [disabled]="disabled || (receive && base?.fifty === 0)"
-            class="enabled:text-violet-700 enabled:font-medium"
-          >
-            $50
-          </option>
+          formControlName="type"
+          (change)="onChangeType()"
+        >
+          <option value="" disabled>Selecciona una opción</option>
+          <option value="deposit">El dinero ingresa a la caja fuerte</option>
+          <option value="withdrawal">El dinero sale de la caja fuerte</option>
         </select>
       </div>
-    </div>
-    <hr class="border-neutral-300 my-2 5" />
-    <div class="flex flex-col gap-3">
-      <app-button type="submit">Guardar</app-button>
-      <app-button type="button" color="neutral" (click)="close()">
-        Cerrar
-      </app-button>
-    </div>
+      <div class="grid grid-cols-3 gap-3">
+        <div class="control col-span-1">
+          <label for="amount">Cantidad</label>
+          <input
+            type="number"
+            id="amount"
+            class="input"
+            placeholder="Ej: 100"
+            formControlName="amount"
+            autocomplete="off"
+          />
+        </div>
+        <div class="control col-span-2">
+          <label for="denomination">Denominación</label>
+          <select
+            id="denomination"
+            class="input"
+            formControlName="denomination"
+          >
+            <option value="" disabled>Selecciona una denominación</option>
+            <option
+              value="hundredThousand"
+              [disabled]="disabled || (receive && base?.hundredThousand === 0)"
+              class="enabled:text-violet-700 enabled:font-medium"
+            >
+              $100.000
+            </option>
+            <option
+              value="fiftyThousand"
+              [disabled]="disabled || (receive && base?.fiftyThousand === 0)"
+              class="enabled:text-violet-700 enabled:font-medium"
+            >
+              $50.000
+            </option>
+            <option
+              value="twentyThousand"
+              [disabled]="disabled || (receive && base?.twentyThousand === 0)"
+              class="enabled:text-violet-700 enabled:font-medium"
+            >
+              $20.000
+            </option>
+            <option
+              value="tenThousand"
+              [disabled]="disabled || (receive && base?.tenThousand === 0)"
+              class="enabled:text-violet-700 enabled:font-medium"
+            >
+              $10.000
+            </option>
+            <option
+              value="fiveThousand"
+              [disabled]="disabled || (receive && base?.fiveThousand === 0)"
+              class="enabled:text-violet-700 enabled:font-medium"
+            >
+              $5.000
+            </option>
+            <option
+              value="twoThousand"
+              [disabled]="disabled || (receive && base?.twoThousand === 0)"
+              class="enabled:text-violet-700 enabled:font-medium"
+            >
+              $2.000
+            </option>
+            <option
+              value="thousand"
+              [disabled]="disabled || (receive && base?.thousand === 0)"
+              class="enabled:text-violet-700 enabled:font-medium"
+            >
+              $1.000
+            </option>
+            <option
+              value="fiveHundred"
+              [disabled]="disabled || (receive && base?.fiveHundred === 0)"
+              class="enabled:text-violet-700 enabled:font-medium"
+            >
+              $500
+            </option>
+            <option
+              value="twoHundred"
+              [disabled]="disabled || (receive && base?.twoHundred === 0)"
+              class="enabled:text-violet-700 enabled:font-medium"
+            >
+              $200
+            </option>
+            <option
+              value="hundred"
+              [disabled]="disabled || (receive && base?.hundred === 0)"
+              class="enabled:text-violet-700 enabled:font-medium"
+            >
+              $100
+            </option>
+            <option
+              value="fifty"
+              [disabled]="disabled || (receive && base?.fifty === 0)"
+              class="enabled:text-violet-700 enabled:font-medium"
+            >
+              $50
+            </option>
+          </select>
+        </div>
+      </div>
+      <hr class="border-neutral-300 my-2 5" />
+      <div class="flex flex-col gap-3">
+        <app-button type="submit">Guardar</app-button>
+        <app-button type="button" color="neutral" (click)="close()">
+          Cerrar
+        </app-button>
+      </div>
+    </app-fieldset>
   </form>
 </app-modal>
