remove: text size

--- a/src/app/admin/dashboard/components/platforms-modal/platforms-modal.component.html
+++ b/src/app/admin/dashboard/components/platforms-modal/platforms-modal.component.html
@@ -1,4 +1,4 @@
-<app-modal headline="Plataformas" width="4xl" align="center" fontSize="3xl">
+<app-modal headline="Plataformas" width="4xl" align="center">
   <div class="max-h-[21rem] overflow-y-auto">
     <app-platforms-stats-table />
   </div>
