update: header responsive

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -21,7 +21,7 @@
         (click)="toggleShowDropdown()"
       >
         <fa-icon [icon]="faAccount" />
-        <span class="hidden lg:inline font-medium">
+        <span class="text-sm sm:text-base font-medium">
           ID {{ loggedIn()?.id }} - {{ loggedIn()?.name }}
           {{ loggedIn()?.lastName }}
         </span>
