--- a/src/app/auth/components/login-form/login-form.component.html
+++ b/src/app/auth/components/login-form/login-form.component.html
@@ -6,7 +6,7 @@
       id="code"
       class="input"
       formControlName="code"
-      autocomplete="username"
+      autocomplete="off"
     />
   </div>
   <div class="control">
