--- a/src/app/auth/components/request-change-password-form/request-change-password-form.component.html
+++ b/src/app/auth/components/request-change-password-form/request-change-password-form.component.html
@@ -7,6 +7,7 @@
       class="input"
       formControlName="userCode"
       placeholder="Ej: c1"
+      autocomplete="off"
     />
   </div>
   <app-button type="submit" [loading]="loading">
